# plexapi-dev-docs

./: .gitignore  .spectral.yaml  LICENSE  PLE-5-recovery-note.md  README.md  ROADMAP.md  astro.config.mjs  marker-test.txt  package-lock.json  package.json  plex-api-spec-reuse-audit.md  pnpm-lock.yaml  pnpm-workspace.yaml  sdk-assessment-lukasparke-spec.md  sdk-generation-strategy.md
.github/workflows/: ci.yml  spec-validate.yml
docs/: contributing.md  deploy.md  index.md
docs/.vitepress/: config.mjs
docs/design/: api-contract.md  sdk-generation-strategy.md
docs/guide/: authentication.md  index.md  quick-start.md
docs/reference/: endpoints.md  index.md  library.md  server.md  sessions.md
runbooks/: cloudflare-credentials.md
scripts/: expand-spec.mjs  generate-reference.mjs  openapi-diff.mjs  validate-openapi.js  validate-schema.mjs  validate-spec.mjs
sdks/go/: README.md  client.go  go.mod
sdks/python/: README.md  pyproject.toml
sdks/python/src/plexapi_sdk/: __init__.py  client.py
sdks/typescript/: README.md  openapi-generator-config.json  package.json  tsconfig.json  vitest.config.ts
sdks/typescript/examples/: quickstart.ts
sdks/typescript/src/: client.ts  errors.ts  index.ts
sdks/typescript/src/resources/: library.ts  playlists.ts  search.ts  server.ts  sessions.ts
sdks/typescript/src/types/: openapi.ts
sdks/typescript/templates/typescript-fetch/: README.md
sdks/typescript/test/: client.test.ts
spec/: package.json  plex-media-server.openapi.json
src/content/docs/: contributing.md  index.mdx
src/content/docs/design/: api-contract.md
(+12 files in other folders)
