[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plexapi-sdk"
version = "0.1.0"
description = "Python SDK for the Plex Media Server API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "PlexAPI.dev contributors" },
]
keywords = ["plex", "plex-media-server", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plexapi_sdk"]

[tool.ruff.lint]
select = ["E", "F", "I"]
